# zed-jinja-universal

./: .gitignore  Justfile  LICENSE  README.md  extension.toml  languages.toml
examples/: example.c.jinja  example.cmake.jinja  example.cpp.jinja  example.cs.jinja  example.css.jinja  example.dockerfile.jinja  example.env.jinja  example.ex.jinja  example.fs.jinja  example.go.jinja  example.graphql.jinja  example.hs.jinja  example.html.jinja  example.json.jinja  example.jsx.jinja  example.md.jinja  example.php.jinja  example.r.jinja  example.scss.jinja  example.sql.jinja  example.swift.jinja  example.tex.jinja  example.tf.jinja  example.toml.jinja  example.tsx.jinja  example.xml.jinja  example.yaml.jinja
examples/comparison/: test.go  test.go.jinja  test.js  test.js.jinja  test.py  test.py.jinja  test.sql  test.sql.jinja  test.yaml  test.yaml.jinja
languages/actionscript_jinja/: config.toml  injections.scm
languages/ada_jinja/: config.toml  injections.scm
languages/agda_jinja/: config.toml  injections.scm
languages/aiken_jinja/: config.toml  injections.scm
languages/alex_jinja/: config.toml  injections.scm
languages/amber_jinja/: config.toml  injections.scm
languages/angular_jinja/: config.toml  injections.scm
languages/animationtxt_jinja/: config.toml  injections.scm
languages/antlers_jinja/: config.toml  injections.scm
languages/apache_avro_jinja/: config.toml  injections.scm
languages/arkts_jinja/: config.toml  injections.scm
languages/asciidoc_jinja/: config.toml  injections.scm
scripts/: Justfile  README.md  common.py  generate.py  pyproject.toml  sync_zed_languages.py
scripts/templates/: config.toml.template  injections.scm.template
scripts/tests/integration/: test_sync_real.py
scripts/tests/unit/: test_common.py  test_generate.py  test_sync_unit.py
(+683 files in other folders)
